namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: network
   labels:
     version: new
     env: network
