pod-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pod-net
  namespace: network
spec:
  podSelector:
    matchLabels:
       env: frontend
       rule: one
  ingress:
  - from:
    - podSelector:
        matchLabels:
           env: backend
           rule: one
    ports:
    - port: 80
      protocol: TCP
